<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_portfolio">My Nanodegree Apps!</string>
    <string name="app_spotify_streamer">Spotify Streamer</string>
    <string name="app_scores">Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_build_it_bigger">Build it Bigger</string>
    <string name="app_xyz_reader">XYZ Reader</string>
    <string name="app_capstone_my_own">Capstone: My Own App</string>
</resources>
