<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sameer.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_portfolio"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_spotify"
            style="@style/OrangeStyle"
            android:text="@string/app_spotify_streamer" />

        <Button
            android:id="@+id/button_scores"
            style="@style/OrangeStyle"
            android:text="@string/app_scores" />

        <Button
            android:id="@+id/button_library"
            style="@style/OrangeStyle"
            android:text="@string/app_library" />

        <Button
            android:id="@+id/button_build_it"
            style="@style/OrangeStyle"
            android:text="@string/app_build_it_bigger" />

        <Button
            android:id="@+id/button_xyz_reader"
            style="@style/OrangeStyle"
            android:text="@string/app_xyz_reader" />

        <Button
            android:id="@+id/button_capstone"
            style="@style/MagentaStyle"
            android:text="@string/app_capstone_my_own"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>